# geographic_info-release

./: CHANGELOG.rst  CMakeLists.txt  README.md  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
debian/: changelog  control  copyright  gbp.conf  rules
geodesy/: CHANGELOG.rst  package.xml
geodesy/include/geodesy/: ellipsoid.h  geodesics.h  utm.h  wgs84.h  wgs84_ellipsoid.h
geodesy/src/conv/: ecef_conversions.cpp  utm_conversions.cpp
geodesy/tests/: test_ecef.cpp  test_geodesics.cpp  test_utm.cpp  test_wgs84.cpp
geographic_info/: package.xml
geographic_msgs/: CHANGELOG.rst  package.xml
include/geodesy/: ecef.h  utm.h  wgs84.h
rpm/: ros-galactic-geodesy.spec  ros-galactic-geographic-info.spec  ros-humble-geographic-info.spec  ros-humble-geographic-msgs.spec  ros-indigo-geodesy.spec  ros-indigo-geographic-info.spec  ros-indigo-geographic-msgs.spec  ros-iron-geodesy.spec  ros-iron-geographic-info.spec  ros-iron-geographic-msgs.spec  ros-jade-geodesy.spec  ros-jade-geographic-info.spec  ros-jazzy-geodesy.spec  ros-jazzy-geographic-info.spec  ros-kilted-geographic-msgs.spec  ros-kinetic-geodesy.spec  ros-kinetic-geographic-msgs.spec  ros-lunar-geographic-info.spec  ros-lunar-geographic-msgs.spec  ros-lyrical-geodesy.spec  ros-lyrical-geographic-msgs.spec  ros-melodic-geographic-msgs.spec  ros-noetic-geographic-msgs.spec  ros-rolling-geodesy.spec  ros-rolling-geographic-info.spec  ros-rolling-geographic-msgs.spec  template.spec
src/conv/: utm_conversions.cpp
tests/: test_utm.cpp  test_wgs84.cpp
